test/parser/Queries/syntax_errors/fail_K-ForExprPositionalVar-13.xq
(:***** $ ********************* where ***** let *********** for *********** eq *:)
(: Test: K-ForExprPositionalVar-13    let           $            :)
(: Written  fooFrans Englich   where         eq                  foo :)
(: Date: 2006-10-05T18:29:37+02:00  for   foo                    :)
 $ (:Purpose: Verify that  position is properly computed for fn:insert-before( for )(#2) eq . :)
(:************ for **** where ******************* let ****** ne ******* let **foo*:)
deep-equal((1, 2,  for 3, 4),	    eq  for for   let $i at p
foo	  in insert-before $ (( let 1,  ne current-time(), 1, current-date(),  ne 3))
	   return $p)